3択クイズ作成

--- a/js/3option_quiz/index.html
+++ b/js/3option_quiz/index.html
@@ -19,25 +19,31 @@
       <h2 class="q-title">問題1. 世界で3番目に面積の大きい国は？
       </h2>
       <div class="q-radio">
+      <form id = "form">
         <label><input type="radio" name="question1" value="1" checked><span>カナダ</span></label>
         <label><input type="radio" name="question1" value="2"><span>アメリカ合衆国</span></label>
         <label><input type="radio" name="question1" value="3"><span>中華人民共和国</span></label>
+      </form>
       </div>
     </div>
     <div class="q-wrapper">
       <h2 class="q-title">問題2. 日本で一番人口の少ない都道府県は？</h2>
       <div class="q-radio">
+      <form id = "form2">
         <label><input type="radio" name="question2" value="1" checked><span>島根県</span></label><br>
         <label><input type="radio" name="question2" value="2"><span>高知県</span></label><br>
         <label><input type="radio" name="question2" value="3"><span>鳥取県</span></label>
+      </form>
       </div>
     </div>
     <div class="q-wrapper">
       <h2 class="q-title">問題3. りんごの生産量が2番目に多い都道府県は？</h2>
       <div class="q-radio">
+      <form id = "form3">
         <label><input type="radio" name="question3" value="1" checked><span>山形県</span></label><br>
         <label><input type="radio" name="question3" value="2"><span>長野県</span></label><br>
         <label><input type="radio" name="question3" value="3"><span>山梨県</span></label>
+      </form>
       </div>
     </div>
     <div class="answer" id="answer">解答!!</div>
